--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@
 .main
 {
     text-align: center;
+    padding-bottom: 20px;
 
 
 }
@@ -138,7 +139,7 @@ img
     border-radius: 40px;
     padding: 15px;
     margin-top: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 35px;
 }
 .homepage p, .homepage ol, .homepage li, .homepage ul, .homepage h2
 {
@@ -226,4 +227,9 @@ img
 {
     color: var(--textcolor);
     margin-top: 15px;
+}
+.secrettext
+{
+    text-decoration: none;
+    color: black !important;
 }
